--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,5 +21,6 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
+  "eslint new-cap": ["error", { "capIsNewExceptions": ["IndexController"] }],
   "rules": {}
 }
