--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
     "@types/passport": "^1.0.10",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.2",
@@ -26,6 +27,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
